--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "next": "13.4.5",
     "next-sanity": "^4.3.3",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
