--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
     "aos": "^2.3.4",
+    "hamburger-react": "^2.5.0",
     "next": "13.4.5",
     "next-sanity": "^4.3.3",
     "prop-types": "^15.8.1",
