--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hamburger-react": "^2.5.0",
     "next": "13.4.5",
     "next-sanity": "^4.3.3",
+    "nodemailer": "^6.9.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
