--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.1.3",
     "@sanity/image-url": "^1.0.2",
     "aos": "^2.3.4",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "hamburger-react": "^2.5.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.5",
     "next-sanity": "^4.3.3",
     "nodemailer": "^6.9.3",
@@ -21,5 +25,11 @@
     "react-icons": "^4.9.0",
     "react-whatsapp": "^0.3.0",
     "styled-components": "^6.0.0-rc.3"
+  },
+  "resolution": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss": "^8.3.3"
   }
 }
