--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "hamburger-react": "^2.5.0",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.5",
     "next-sanity": "^4.3.3",
     "nodemailer": "^6.9.3",
