--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
     "react-whatsapp": "^0.3.0",
     "styled-components": "^6.0.0-rc.3"
   },
